# rats-search

./: .dockerignore  .gitignore  .gitmodules  AGREEMENT.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  cliff.toml  docker-entrypoint.sh  error.txt  import_dashboard.sh  package-lock.json  package.json  prometheus.yml  test_metrics.sh
.github/workflows/: build.yml  changelog.yml
docs/: API.md  MANUAL.md  SERVER.md  USAGE.RU.md  USAGE.md
grafana/: dashboard-ru.json  dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
installer/: windows.iss
resources/: resources.qrc
resources/images/: README.md
resources/styles/: dark.qss  light.qss
src/: activitywidget.cpp  activitywidget.h  autostartmanager.cpp  autostartmanager.h  badwords.h  contentdetector.cpp  contentdetector.h  downloadswidget.cpp  downloadswidget.h  favoritesmanager.cpp  favoritesmanager.h  favoriteswidget.cpp  favoriteswidget.h  feedwidget.cpp  feedwidget.h  legacymigration.cpp  legacymigration.h  main.cpp  mainwindow.cpp  mainwindow.h  manticoremanager.cpp  manticoremanager.h  p2pnetwork.cpp  p2pnetwork.h  searchapi.cpp  searchapi.h  searchengine.cpp  searchengine.h  searchresultmodel.cpp  searchresultmodel.h  settingsdialog.cpp  settingsdialog.h  sphinxql.cpp  sphinxql.h  startupinfo.cpp  startupinfo.h  toptorrentswidget.cpp  toptorrentswidget.h  torrentclient.cpp  torrentclient.h  (+13 more)
src/api/: apiserver.cpp  apiserver.h  configmanager.cpp  configmanager.h  downloadmanager.cpp  downloadmanager.h  feedmanager.cpp  feedmanager.h  migrationmanager.cpp  migrationmanager.h  p2pstoremanager.cpp  p2pstoremanager.h  ratsapi.cpp  ratsapi.h  trackerchecker.cpp  trackerchecker.h  trackerinfoscraper.cpp  trackerinfoscraper.h  trackerwrapper.cpp  trackerwrapper.h  translationmanager.cpp  translationmanager.h  updatemanager.cpp  updatemanager.h
src/app/: application.cpp  application.h  config_store.cpp  config_store.h  favorites_store.cpp  favorites_store.h  translation_manager.cpp  translation_manager.h
src/bootstrap/: legacymigration.cpp  startupinfo.cpp
src/common/: infohash.h  result.h
src/data/: database.cpp  database.h  feed_repository.cpp  feed_repository.h  manticore.cpp  manticore.h  query.h  torrent_repository.cpp  torrent_repository.h
src/domain/: content_classifier.cpp  content_classifier.h  torrent_codec.h
src/net/: crawler.cpp  crawler.h  librats_convert.h  p2p_transport.cpp  p2p_transport.h  swarm_scraper.cpp  swarm_scraper.h  torrent_engine.cpp  torrent_engine.h  tracker_info_scraper.cpp  tracker_info_scraper.h  tracker_scraper.cpp  tracker_scraper.h  tracker_site_scraper.cpp  tracker_site_scraper.h
src/peer/: peer_api.cpp  peer_api.h
src/rest/: api_router.cpp  api_router.h  api_server.cpp  api_server.h
src/services/: download_service.cpp  download_service.h  feed_service.cpp  feed_service.h  filter_policy.h  indexing_service.cpp  indexing_service.h  migration_service.cpp  migration_service.h  p2p_store.cpp  p2p_store.h  peer_registry.cpp  peer_registry.h  replication_service.cpp  replication_service.h  search_service.cpp  search_service.h  torrent_exporter.cpp  torrent_session_store.h  tracker_service.cpp  tracker_service.h  update_service.cpp  update_service.h
src/ui/: activitywidget.cpp  activitywidget.h  autostartmanager.cpp  downloadswidget.cpp  downloadswidget.h  favoriteswidget.cpp  feedwidget.cpp  mainwindow.cpp  mainwindow.h  searchresultmodel.cpp  searchresultmodel.h  settingsdialog.cpp  settingsdialog.h  toptorrentswidget.cpp  toptorrentswidget.h  torrentdetailspanel.cpp  torrentdetailspanel.h  torrentfileswidget.cpp  torrentfileswidget.h  torrentitemdelegate.cpp  torrentitemdelegate.h  torrenttablewidget.cpp  torrenttablewidget.h
tests/: CMakeLists.txt  README.md  test_content_classifier.cpp  test_contentdetector.cpp  test_domain.cpp  test_infohash.cpp  test_manticore_queries.cpp  test_metrics_endpoint.cpp  test_query.cpp  test_searchresultmodel.cpp  test_sphinxql.cpp  test_torrentinfo.cpp  test_update_service.cpp  test_updatemanager.cpp  test_utils.cpp  test_webui.cpp
translations/: ratssearch_de.ts  ratssearch_es.ts  ratssearch_fr.ts  ratssearch_ru.ts
webui/: index.html
webui/css/: style.css
webui/js/: app.js  i18n.js
